added bloom effect

--- a/config.json
+++ b/config.json
@@ -12,5 +12,11 @@
   "glowingLine": 0.04,
   "staticNoise": 0.1198,
   "jitter": 0.015,
-  "rgbShift": 0.0
+  "rgbShift": 0.0,
+  "bloomIntensity": 0.5,
+  "bloomThreshold": 0.6,
+  "bloomSoftKnee": 0.5,
+  "bloomResolutionScale": 0.4,
+  "bloomRadius": 2.5,
+  "bloomAlphaScale": 1.0
 }
